ci: add embedding, ghidra, impacket to build workflow, remove strongswan

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -104,8 +104,12 @@ jobs:
               - 'tools/ike-scan/**'
             scapy:
               - 'tools/scapy/**'
-            strongswan:
-              - 'tools/strongswan/**'
+            embedding:
+              - 'tools/embedding/**'
+            ghidra:
+              - 'tools/ghidra/**'
+            impacket:
+              - 'tools/impacket/**'
             playwright:
               - 'tools/playwright/**'
 
@@ -199,7 +203,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, ike-scan, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, office-exploit, payload, playwright, scapy, searchsploit, shell-session, sqlite, sqlmap, ssh, strongswan, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
+        tool: [curl, cve-lookup, embedding, enum4linux-ng, exploit-runner, ffuf, ftp, ghidra, hash-lookup, hydra, ike-scan, impacket, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, office-exploit, payload, playwright, scapy, searchsploit, shell-session, sqlite, sqlmap, ssh, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
 
     permissions:
       contents: read
