fix(wpscan): remove broken /usr/share/wordlists default, require explicit wordlist path

--- a/tools/wpscan/tool.yaml
+++ b/tools/wpscan/tool.yaml
@@ -107,7 +107,7 @@ methods:
         description: "All vulnerabilities found across plugins/themes, each with: plugin/theme name, title, vuln_type, reference URLs. Only populated when API token is provided."
 
   bruteforce:
-    description: "Brute-force WordPress login using wpscan's built-in password attack. Runs wpscan with --passwords and --usernames flags. WPScan auto-detects the best attack method: wp-login (POST to /wp-login.php, 1 password/request), xmlrpc (POST to /xmlrpc.php, faster), or xmlrpc-multicall (batches up to 500 passwords per request via XML-RPC system.multicall — only works on WP < 4.4). Attack mode can be overridden with the attack_mode parameter. Uses --random-user-agent. Parses JSON output for cracked credentials. Ships with rockyou.txt (14M passwords) at /usr/share/wordlists/rockyou.txt."
+    description: "Brute-force WordPress login using wpscan's built-in password attack. Runs wpscan with --passwords and --usernames flags. WPScan auto-detects the best attack method: wp-login (POST to /wp-login.php, 1 password/request), xmlrpc (POST to /xmlrpc.php, faster), or xmlrpc-multicall (batches up to 500 passwords per request via XML-RPC system.multicall — only works on WP < 4.4). Attack mode can be overridden with the attack_mode parameter. Uses --random-user-agent. Parses JSON output for cracked credentials. Wordlist must be provided — download to /session/wordlists/ first using curl.download_to_file."
     when_to_use: "After enumerate_users discovers valid WordPress usernames, especially 'admin' or 'administrator'. The typical WordPress brute-force workflow: (1) enumerate_users to find usernames, (2) bruteforce with a common password list against each user. Try the admin user first — it's the most valuable target (full WordPress admin access). For CTFs, common passwords like 'admin', 'password', 'wordpress' should be tried first. For real engagements, use a targeted wordlist. Note: WordPress has no default lockout mechanism, but security plugins (Wordfence, Sucuri, etc.) may block after failed attempts. XML-RPC multicall bypasses per-request rate limiting on WP < 4.4."
     params:
       url:
@@ -120,8 +120,8 @@ methods:
         description: "Username to brute-force. Use a username discovered by enumerate_users. Can also be a comma-separated list ('admin,editor,john') or a file path ('/tmp/users.txt')."
       wordlist:
         type: string
-        default: "/usr/share/wordlists/rockyou.txt"
-        description: "Path to password wordlist file. Default rockyou.txt (14M passwords) is pre-installed. For faster targeted attempts, create a custom wordlist in /tmp/ or /session/."
+        required: true
+        description: "Path to password wordlist file. Download to /session/wordlists/ first using curl.download_to_file (e.g., '/session/wordlists/rockyou.txt'). For faster targeted attempts, create a custom wordlist with the Write tool."
       attack_mode:
         type: enum
         values: [auto, wp-login, xmlrpc, xmlrpc-multicall]
