chore: rebuild registry.yaml with wpscan wordlist fix

--- a/registry.yaml
+++ b/registry.yaml
@@ -1,5 +1,5 @@
 version: '2.0'
-updated_at: '2026-02-22T12:22:14Z'
+updated_at: '2026-02-23T10:35:45Z'
 tools:
   curl:
     name: curl
@@ -11094,7 +11094,8 @@ tools:
           --usernames flags. WPScan auto-detects the best attack method: wp-login (POST to /wp-login.php, 1 password/request),
           xmlrpc (POST to /xmlrpc.php, faster), or xmlrpc-multicall (batches up to 500 passwords per request via XML-RPC system.multicall
           — only works on WP < 4.4). Attack mode can be overridden with the attack_mode parameter. Uses --random-user-agent.
-          Parses JSON output for cracked credentials. Ships with rockyou.txt (14M passwords) at /usr/share/wordlists/rockyou.txt.'
+          Parses JSON output for cracked credentials. Wordlist must be provided — download to /session/wordlists/ first using
+          curl.download_to_file.'
         when_to_use: 'After enumerate_users discovers valid WordPress usernames, especially ''admin'' or ''administrator''.
           The typical WordPress brute-force workflow: (1) enumerate_users to find usernames, (2) bruteforce with a common
           password list against each user. Try the admin user first — it''s the most valuable target (full WordPress admin
@@ -11113,9 +11114,10 @@ tools:
               list ('admin,editor,john') or a file path ('/tmp/users.txt').
           wordlist:
             type: string
-            default: /usr/share/wordlists/rockyou.txt
-            description: Path to password wordlist file. Default rockyou.txt (14M passwords) is pre-installed. For faster
-              targeted attempts, create a custom wordlist in /tmp/ or /session/.
+            required: true
+            description: Path to password wordlist file. Download to /session/wordlists/ first using curl.download_to_file
+              (e.g., '/session/wordlists/rockyou.txt'). For faster targeted attempts, create a custom wordlist with the Write
+              tool.
           attack_mode:
             type: enum
             values:
