feat: add netexec and evil-winrm MCP tools, add timeout_seconds and required_ports to registry
New tools:
- netexec: 7 methods (smb/winrm/ldap/mssql/ssh/rdp/wmi), Kali-based Docker image
- evil-winrm: 3 methods (exec/upload/download) via pywinrm with PTH support

Registry changes:
- Add timeout_seconds to all 39 tool.yaml files (agent-controlled override via mcp_tool)
- Remove per-method timeout_seconds (agent decides granularity)
- Add required_ports to impacket methods for port pre-flight checks
- Add see_also cross-references to impacket
- Add required_ports_json and timeout_seconds columns to LanceDB build script
- Rebuild registry.yaml with all 39 tools (290 method rows)

--- a/tools/curl/tool.yaml
+++ b/tools/curl/tool.yaml
@@ -3,6 +3,7 @@ version: "8.18"
 description: "HTTP client (curl 8.18.0 with HTTP/2, HTTP/3, NTLM, Kerberos support) wrapped in 5 specialized methods: request (any HTTP method with timing/debug), inject (RCE payload delivery with {PAYLOAD} placeholder and auto-encoding), upload (multipart file upload for web shells), download (small files as base64), and download_to_file (large files with auto .gz decompression). Returns structured response data: status code, parsed headers, body (50KB cap), timing breakdown (DNS/connect/TLS/TTFB/total), and error classification. Default User-Agent mimics Chrome on Windows. For login forms and JS pages, use playwright-mcp instead."
 image: "ghcr.io/silicon-works/mcp-tools-curl:latest"
 image_size_mb: 100
+timeout_seconds: 60
 
 capabilities:
   - http_requests
