--- a/tools/embedding/tool.yaml
+++ b/tools/embedding/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "BGE-M3 embedding model for semantic search. Internal tool for tool discovery and experience matching."
 image: "ghcr.io/silicon-works/mcp-tools-embedding:latest"
 image_size_mb: 2500
+timeout_seconds: 300
 internal: true  # Not for direct agent use
 
 capabilities:
