--- a/tools/enum4linux-ng/tool.yaml
+++ b/tools/enum4linux-ng/tool.yaml
@@ -3,6 +3,7 @@ version: "1.3.7"
 description: "Next-generation SMB/Windows/Samba enumeration tool (enum4linux-ng v1.3.7, Python rewrite of enum4linux.pl). Wraps Samba tools (nmblookup, net, rpcclient, smbclient) for automated enumeration of: SMB shares with access checks, users via RPC and RID cycling, groups with member lists, password policy, OS information, services, printers, NetBIOS names, and LDAP domain info (for DCs). Smart enumeration — checks SMB/LDAP accessibility first, skips inapplicable checks. Supports anonymous (null session), username/password, Kerberos ticket, and NTLM hash authentication. JSON/YAML output for structured parsing."
 image: "ghcr.io/silicon-works/mcp-tools-enum4linux-ng:latest"
 image_size_mb: 150
+timeout_seconds: 300
 
 capabilities:
   - smb_enumeration
