--- a/tools/ffuf/tool.yaml
+++ b/tools/ffuf/tool.yaml
@@ -3,6 +3,7 @@ version: "2.1.0"
 description: "Fast web fuzzer (ffuf v2.1.0, Go-based) for directory/file discovery, GET/POST parameter fuzzing, and virtual host enumeration. Uses FUZZ keyword placeholder in URLs, headers, or POST data. Includes 7 built-in wordlists: common (4,614 entries), big (20,469), small (959), dirbuster-small (87,650), dirbuster-medium (220,546), raft-small, raft-medium from SecLists. Supports response filtering by status code, size, lines, words, regex, and response time. Default 40 concurrent threads. JSON output with structured result parsing. Auto-calibration (-ac) for intelligent response filtering. Includes dirb and SecLists wordlists."
 image: "ghcr.io/silicon-works/mcp-tools-ffuf:latest"
 image_size_mb: 200
+timeout_seconds: 600
 
 capabilities:
   - directory_bruteforce
