--- a/tools/ftp/tool.yaml
+++ b/tools/ftp/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "FTP/FTPS client (Python ftplib) for connecting to FTP servers, listing directories, downloading files, uploading content, and deleting files. 5 methods: connect (test connection + root listing), list (directory contents with parsed permissions/sizes), download (file as base64 + text), upload (text or base64 content), delete. Defaults to anonymous login (username='anonymous', password='anonymous@'). Supports FTPS (FTP over SSL/TLS) with auto-disabled certificate verification. Downloads return both base64 (for binary) and text (for readable files, capped at 50KB). Uploads support plain text or base64-encoded binary content."
 image: "ghcr.io/silicon-works/mcp-tools-ftp:latest"
 image_size_mb: 100
+timeout_seconds: 120
 
 capabilities:
   - ftp_connection
