--- a/tools/ghidra/tool.yaml
+++ b/tools/ghidra/tool.yaml
@@ -3,6 +3,7 @@ version: "12.0"
 description: "Ghidra reverse engineering framework for binary decompilation, disassembly, function analysis, and cross-reference mapping. Converts machine code to readable C pseudocode. Powered by bethington/ghidra-mcp (headless mode, 128 tools available via bridge)."
 image: "ghcr.io/silicon-works/mcp-tools-ghidra:latest"
 image_size_mb: 1500
+timeout_seconds: 600
 
 capabilities:
   - decompilation
