--- a/tools/hash-lookup/tool.yaml
+++ b/tools/hash-lookup/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "Online hash lookup tool that queries public pre-cracked hash databases (hashes.com, nitrxgen, hashtoolkit) to instantly recover plaintext passwords from known hashes. Much faster than john/hashcat for common passwords — lookup takes seconds vs minutes/hours for offline cracking. Also provides hash type identification (MD5, SHA1, SHA256, SHA512, NTLM, MySQL, bcrypt) via pattern matching, and hash generation (MD5, SHA1, SHA256, SHA512, NTLM) for testing and verification. Pure Python — no external tools, requires network access."
 image: "ghcr.io/silicon-works/mcp-tools-hash-lookup:latest"
 image_size_mb: 100
+timeout_seconds: 60
 
 capabilities:
   - hash_lookup
