--- a/tools/hydra/tool.yaml
+++ b/tools/hydra/tool.yaml
@@ -3,6 +3,7 @@ version: "9.6"
 description: "Network authentication brute-forcing tool (v9.6) supporting 50+ protocols including SSH, FTP, HTTP forms, RDP, SMB, MySQL, PostgreSQL, VNC, IMAP, SMTP, Redis, MongoDB, LDAP, and more. Features service-specific thread defaults (SSH=4, HTTP=16) to avoid rate limiting. Ships with SecLists and rockyou.txt wordlists pre-installed. Supports password list attacks (-P), single password testing (-p), null/same/reversed login checks (-e nsr), and brute-force character generation (-x). HTTP form attacks use the format '/path:user=^USER^&pass=^PASS^:F=error_string'. Always runs with -V (verbose) for progress tracking."
 image: "ghcr.io/silicon-works/mcp-tools-hydra:latest"
 image_size_mb: 200
+timeout_seconds: 600
 
 capabilities:
   - password_bruteforce
