--- a/tools/ike-scan/tool.yaml
+++ b/tools/ike-scan/tool.yaml
@@ -3,6 +3,7 @@ version: "1.1.0"
 description: "IKE/IPsec VPN enumeration and exploitation tool (wraps ike-scan and psk-crack). 6 methods: scan (detect IKE service on UDP 500), aggressive_mode (test group name + capture PSK hash), enumerate_transforms (discover encryption/auth methods), brute_group_names (parallel group name brute force with built-in wordlists), get_psk_hash (capture PSK hash for offline cracking), crack_psk (dictionary or brute force PSK cracking via psk-crack — john does NOT support IKE PSK format). Full IKEv1 main mode and aggressive mode support."
 image: "ghcr.io/silicon-works/mcp-tools-ike-scan:latest"
 image_size_mb: 150
+timeout_seconds: 120
 
 capabilities:
   - ike_enumeration
