--- a/tools/impacket/tool.yaml
+++ b/tools/impacket/tool.yaml
@@ -3,6 +3,7 @@ version: "0.12"
 description: "Windows/Active Directory exploitation toolkit (Impacket 0.12). 13 methods in 4 categories: remote execution (psexec, wmiexec, smbexec, dcomexec, atexec — 5 execution methods with different stealth/reliability tradeoffs), credential dumping (secretsdump — SAM, LSA, NTDS.dit via DRSUAPI or VSS), Kerberos attacks (kerberoast, asreproast, get_tgt), SMB operations (smb_shares, smb_get, smb_put), AD enumeration (get_ad_users, lookupsid). All methods support password, NTLM hash (pass-the-hash), Kerberos, and AES key authentication."
 image: "ghcr.io/silicon-works/mcp-tools-impacket:latest"
 image_size_mb: 900
+timeout_seconds: 300
 
 capabilities:
   - remote_execution
@@ -71,8 +72,15 @@ routing:
     - "getTGT"
   prefer_over: []
 
+see_also:
+  - tool: netexec
+    reason: "Alternative for credential validation and authenticated execution"
+  - tool: evil-winrm
+    reason: "Alternative for WinRM shell access"
+
 methods:
   psexec:
+    required_ports: [445]
     description: "Execute commands on a remote Windows host via PsExec (creates a service, most reliable but noisy)"
     when_to_use: "When reliable remote execution is needed and stealth is not critical. Uses SMB service creation."
     params:
@@ -134,6 +142,7 @@ methods:
         description: "Warning messages"
 
   wmiexec:
+    required_ports: [135]
     description: "Execute commands on a remote Windows host via WMI (stealthier than psexec, no service creation)"
     when_to_use: "When stealth matters - no service creation, uses WMI for execution. Preferred for lateral movement."
     params:
@@ -190,6 +199,7 @@ methods:
         description: "Command output"
 
   smbexec:
+    required_ports: [445]
     description: "Execute commands on a remote Windows host via SMB (native commands, no binary upload needed)"
     when_to_use: "When other methods fail or when you want native command execution without uploading binaries"
     params:
@@ -251,6 +261,7 @@ methods:
         description: "Command output"
 
   dcomexec:
+    required_ports: [135]
     description: "Execute commands on a remote Windows host via DCOM objects (MMC20, ShellWindows, ShellBrowserWindow)"
     when_to_use: "Alternative lateral movement using DCOM. Useful when SMB-based methods are blocked."
     params:
@@ -315,6 +326,7 @@ methods:
         description: "Command output"
 
   atexec:
+    required_ports: [445]
     description: "Execute commands on a remote Windows host via Task Scheduler (scheduled task based execution)"
     when_to_use: "When other execution methods are blocked. Uses Windows Task Scheduler for command execution."
     params:
@@ -368,6 +380,7 @@ methods:
         description: "Command output"
 
   secretsdump:
+    required_ports: [445]
     description: "Dump credentials from a Windows host (SAM, LSA secrets, cached creds, NTDS.dit via DRSUAPI/VSS)"
     when_to_use: "After gaining admin access to dump password hashes. Use -just-dc on domain controllers for NTDS.dit."
     params:
@@ -444,6 +457,7 @@ methods:
         description: "Total number of hashes extracted"
 
   kerberoast:
+    required_ports: [88]
     description: "Kerberoasting attack - extract TGS service ticket hashes for offline cracking (targets accounts with SPNs)"
     when_to_use: "With any valid domain credentials to extract service account hashes for offline cracking"
     params:
@@ -503,6 +517,7 @@ methods:
         description: "Number of users with SPNs found"
 
   asreproast:
+    required_ports: [88]
     description: "AS-REP Roasting - extract hashes for accounts with Kerberos pre-authentication disabled"
     when_to_use: "To find accounts without Kerberos pre-authentication and extract their hashes for cracking"
     params:
@@ -559,6 +574,7 @@ methods:
         description: "Users without pre-authentication"
 
   smb_shares:
+    required_ports: [445]
     description: "List SMB shares on a remote Windows host with access permissions"
     when_to_use: "To enumerate available SMB shares before accessing files"
     params:
@@ -604,6 +620,7 @@ methods:
         description: "Number of shares found"
 
   smb_get:
+    required_ports: [445]
     description: "Download a file from an SMB share"
     when_to_use: "To retrieve files from Windows shares (config files, scripts, sensitive data)"
     params:
@@ -657,6 +674,7 @@ methods:
         description: "File size in bytes"
 
   smb_put:
+    required_ports: [445]
     description: "Upload content to an SMB share"
     when_to_use: "To upload files to Windows shares (payloads, scripts, tools)"
     params:
@@ -711,6 +729,7 @@ methods:
         description: "Uploaded content size in bytes"
 
   get_ad_users:
+    required_ports: [389]
     description: "Enumerate Active Directory users via LDAP (requires domain credentials)"
     when_to_use: "During enumeration phase to discover domain users for targeting"
     params:
@@ -760,6 +779,7 @@ methods:
         description: "Number of users found"
 
   lookupsid:
+    required_ports: [445]
     description: "Brute-force SID enumeration to discover domain users, groups, and aliases"
     when_to_use: "To enumerate domain objects when LDAP is restricted or for initial domain recon"
     params:
@@ -818,6 +838,7 @@ methods:
         description: "Total objects discovered"
 
   get_tgt:
+    required_ports: [88]
     description: "Request a Kerberos TGT and save the ccache file for pass-the-ticket attacks"
     when_to_use: "To obtain a TGT for Kerberos-based attacks or when needing to authenticate via tickets"
     params:
