--- a/tools/john/tool.yaml
+++ b/tools/john/tool.yaml
@@ -3,6 +3,7 @@ version: "1.9.0-jumbo-1"
 description: "Password hash cracking tool — John the Ripper 1.9.0-jumbo-1 (community-enhanced version) with AVX2 acceleration. Supports 300+ hash formats including md5crypt, sha512crypt, bcrypt, NTLM, LM, MySQL, MSSQL, Oracle, PostgreSQL, Kerberos, WPA, SSH keys, ZIP/RAR/PDF/Office. Includes ~300 *2john converter scripts (ssh2john, zip2john, pdf2john, office2john, etc.) for extracting crackable hashes from encrypted files. Cracking modes: wordlist (with mangling rules), incremental (brute-force), mask (pattern-based), single (username-derived), PRINCE (combination). Ships with rockyou.txt (14M passwords) and john's built-in password.lst wordlist."
 image: "ghcr.io/silicon-works/mcp-tools-john:latest"
 image_size_mb: 200
+timeout_seconds: 900
 
 capabilities:
   - password_cracking
