--- a/tools/lfi-rfi/tool.yaml
+++ b/tools/lfi-rfi/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "Local File Inclusion (LFI) and Remote File Inclusion (RFI) testing and exploitation tool. 5 methods: test_lfi (automated directory traversal with multiple encodings and depths), test_rfi (remote URL inclusion with PHP wrappers), read_file (extract specific files via confirmed LFI), php_filter (read PHP source code via php://filter/convert.base64-encode), log_poison (inject PHP code into log files via User-Agent/Referer/X-Forwarded-For headers for RCE). Supports Linux and Windows path traversal patterns. Uses {PAYLOAD} placeholder in URLs. Authenticated testing via cookies."
 image: "ghcr.io/silicon-works/mcp-tools-lfi-rfi:latest"
 image_size_mb: 100
+timeout_seconds: 300
 
 capabilities:
   - lfi_testing
