--- a/tools/mongodb/tool.yaml
+++ b/tools/mongodb/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "MongoDB client (pymongo 4.16.0) for remote database enumeration and data extraction over the network. Connects to MongoDB servers (default port 27017) with optional username/password authentication against a specified auth database. Supports both authenticated and unauthenticated access — many MongoDB instances found during pentesting have no authentication enabled. Includes automated credential hunting that pattern-matches collection names (users, accounts, admins, credentials, auth, login, passwords) and field names (password, hash, token, api_key, secret) across all databases. Also provides server fingerprinting (version, storage engines, modules, JS engine)."
 image: "ghcr.io/silicon-works/mcp-tools-mongodb:latest"
 image_size_mb: 250
+timeout_seconds: 120
 
 capabilities:
   - database_enumeration
