--- a/tools/mysql/tool.yaml
+++ b/tools/mysql/tool.yaml
@@ -3,6 +3,7 @@ version: "8.0"
 description: "MySQL/MariaDB client (mysql CLI 8.0) for direct database access, enumeration, and data extraction. 5 methods: query (execute arbitrary SQL), list_databases (SHOW DATABASES), list_tables (SHOW TABLES in database), dump_table (SELECT with column filtering and row limit), find_credentials (auto-search for user/password columns across tables). Uses the mysql CLI with JSON output for structured results. Connects per-query (no persistent sessions)."
 image: "ghcr.io/silicon-works/mcp-tools-mysql:latest"
 image_size_mb: 300
+timeout_seconds: 120
 
 capabilities:
   - database_enumeration
