--- a/tools/netcat/tool.yaml
+++ b/tools/netcat/tool.yaml
@@ -3,6 +3,7 @@ version: "2.0"
 description: "Async networking server (Python, aiohttp) for TCP listeners, HTTP callback capture, UDP packet capture, and port testing. 14 methods across 3 transport types: TCP (listen with blocking/non-blocking modes, listener_status/read/write for interactive shell control, exec for one-shot capture, connect for bind shells), HTTP (http_listen with file serving and TLS/auto-cert, http_requests for captured request inspection, http_file for dynamic content), UDP (udp_listen, udp_packets, udp_send), plus check_port, get_interfaces (for LHOST), list, stop. TCP listeners support response templates (fake HTTP responses). HTTP server captures all requests with headers/cookies/query params. Auto-persists to /session/netcat/ when >50 requests or >100KB data. TLS support with auto-generated self-signed certs. Container includes netcat-traditional, ncat, socat, iproute2 as fallback tools."
 image: "ghcr.io/silicon-works/mcp-tools-netcat:latest"
 image_size_mb: 150
+timeout_seconds: 300
 
 capabilities:
   - reverse_shell_listener
