--- a/tools/nikto/tool.yaml
+++ b/tools/nikto/tool.yaml
@@ -3,6 +3,7 @@ version: "2.5"
 description: "Web server vulnerability scanner that checks for 6,900+ vulnerability tests (plus 6,200+ Drupal-specific and 1,800+ dictionary checks), outdated server versions (Apache, nginx, IIS, Tomcat), and server-level misconfigurations including insecure HTTP methods, default credentials, and known CVEs with OSVDB references"
 image: "ghcr.io/silicon-works/mcp-tools-nikto:latest"
 image_size_mb: 150
+timeout_seconds: 300
 
 capabilities:
   - web_vulnerability_scanning
