--- a/tools/nmap/tool.yaml
+++ b/tools/nmap/tool.yaml
@@ -3,6 +3,7 @@ version: "7.98"
 description: "Network scanner (v7.98) for port discovery, service/version detection, OS fingerprinting, and NSE script-based vulnerability scanning. Supports TCP SYN/Connect/ACK/UDP scan types, 613 NSE scripts across categories (vuln, exploit, brute, auth, default, discovery, safe), timing templates T0-T5, and XML output parsing. Compiled with libssh2, openssl, lua 5.4. Requires privileged mode for SYN scans, UDP scans, and OS detection."
 image: "ghcr.io/silicon-works/mcp-tools-nmap:latest"
 image_size_mb: 150
+timeout_seconds: 600
 
 capabilities:
   - port_scanning
