--- a/tools/nosqlmap/tool.yaml
+++ b/tools/nosqlmap/tool.yaml
@@ -3,6 +3,7 @@ version: "0.7"
 description: "NoSQL injection testing and exploitation tool (native Python implementation, not the nosqlmap CLI). 3 methods: scan (quick test with 3 basic MongoDB operator payloads per URL parameter), inject (targeted injection with 16 built-in MongoDB payloads for auth bypass or data extraction), test_payloads (comprehensive test with 21 payloads including baseline comparison, response length differential, and status code change detection). Supports GET and POST with form or JSON content types. Uses httpx (async HTTP client) internally."
 image: "ghcr.io/silicon-works/mcp-tools-nosqlmap:latest"
 image_size_mb: 180
+timeout_seconds: 300
 
 capabilities:
   - nosql_injection
