--- a/tools/playwright/tool.yaml
+++ b/tools/playwright/tool.yaml
@@ -4,6 +4,7 @@ description: "Browser automation via Microsoft @playwright/mcp for complex web i
 source: "https://github.com/microsoft/playwright-mcp"
 image: "ghcr.io/silicon-works/mcp-tools-playwright:latest"
 image_size_mb: 1500
+timeout_seconds: 300
 
 capabilities:
   - browser_automation
