--- a/tools/scapy/tool.yaml
+++ b/tools/scapy/tool.yaml
@@ -3,6 +3,7 @@ version: "2.5"
 description: "Packet crafting and low-level network testing via Scapy 2.5. 8 methods: udp_send (send/receive UDP packets), udp_probe (UDP service discovery with protocol-specific probes), tcp_syn (SYN scan single port), icmp_ping (ICMP echo), dns_query (DNS lookups with A/AAAA/MX/NS/TXT/SOA/ANY types), craft_packet (custom TCP/UDP/ICMP with hex payloads and TCP flags), arp_scan (local network host discovery with MAC addresses), snmp_get (SNMP community string testing). Requires NET_RAW and NET_ADMIN capabilities for raw socket access."
 image: "ghcr.io/silicon-works/mcp-tools-scapy:latest"
 image_size_mb: 200
+timeout_seconds: 300
 
 capabilities:
   - packet_crafting
