--- a/tools/searchsploit/tool.yaml
+++ b/tools/searchsploit/tool.yaml
@@ -3,6 +3,7 @@ version: "latest"
 description: "Offline search of the Exploit Database (exploit-db.com) using the searchsploit CLI. Contains 45,000+ public exploits, shellcodes, and security papers indexed locally — no network required. Searches exploit titles and file paths with fuzzy version range matching (e.g., '2.4' matches '2.0 < 2.5'). Supports JSON output parsing, CVE-based search (--cve), exact matching, and full exploit source code retrieval. Exploit code is stored at /usr/share/exploitdb/exploits/. Includes the full ExploitDB mirror."
 image: "ghcr.io/silicon-works/mcp-tools-searchsploit:latest"
 image_size_mb: 500
+timeout_seconds: 60
 
 capabilities:
   - exploit_search
