--- a/tools/shell-session/tool.yaml
+++ b/tools/shell-session/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "Persistent shell session manager (paramiko for SSH, raw sockets for reverse shells) for maintaining interactive sessions on compromised targets. Unlike the ssh tool (which reconnects per command), shell-session keeps a single SSH connection open for multiple commands via exec. 9 methods: ssh_connect (persistent SSH via paramiko), exec (run command on SSH session), upload/download (SFTP file transfer), listen (reverse shell TCP listener), shell_exec (send command to reverse shell with output stability detection), list_sessions, close, upgrade_shell (dumb shell to PTY via python3 pty.spawn). Supports password and base64-encoded private key authentication. Multiple concurrent sessions identified by session_id."
 image: "ghcr.io/silicon-works/mcp-tools-shell-session:latest"
 image_size_mb: 150
+timeout_seconds: 600
 
 capabilities:
   - persistent_shell_sessions
