--- a/tools/sqlite/tool.yaml
+++ b/tools/sqlite/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "SQLite database client (v3.46.1 with FTS5) for post-exploitation extraction of data from .db and .sqlite files. Accepts database files by path (mounted volume) or base64-encoded content (downloaded from target via ssh/shell-session). Includes automated credential hunting that pattern-matches table names (users, accounts, admin, login, members, employees) and column names (password, hash, token, api_key, secret) to extract username/password pairs. Common targets: WordPress/Drupal user databases, Firefox/Chrome stored credentials and history, mobile app databases, application config stores, session databases, and any web framework using SQLite as backend."
 image: "ghcr.io/silicon-works/mcp-tools-sqlite:latest"
 image_size_mb: 100
+timeout_seconds: 120
 
 capabilities:
   - database_extraction
