--- a/tools/sqlmap/tool.yaml
+++ b/tools/sqlmap/tool.yaml
@@ -3,6 +3,7 @@ version: "1.10"
 description: "Automatic SQL injection detection and exploitation tool (v1.10#stable). Supports 6 injection techniques: Boolean-based blind (B), Error-based (E), Union query-based (U), Stacked queries (S), Time-based blind (T), Inline queries (Q). Detects and exploits MySQL, PostgreSQL, Oracle, MSSQL, SQLite, DB2, MariaDB, and more. Beyond database enumeration, provides OS command execution (--os-cmd/--os-shell), file read/write on the target server, and password hash dumping. Includes 60+ WAF bypass tamper scripts. Runs non-interactively with --batch flag."
 image: "ghcr.io/silicon-works/mcp-tools-sqlmap:latest"
 image_size_mb: 150
+timeout_seconds: 600
 
 capabilities:
   - sql_injection
