--- a/tools/ssh/tool.yaml
+++ b/tools/ssh/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "SSH client (OpenSSH 10.2p1 + sshpass 1.10) for remote command execution, file transfer, and script deployment on compromised hosts. 7 methods: exec (single command with retry), shell (sequential commands joined with &&), copy_from/copy_to (SCP text file transfer), upload_binary (base64 chunked binary upload), run_script (upload+execute+cleanup), and background (nohup/disown detached process with env var injection). Supports password auth (via sshpass), PEM private keys, and OpenSSH-format keys (auto-converted to PEM). Auto-retry on transient failures (timeout, connection reset) with exponential backoff. Classified error messages for connection refused, permission denied, timeout, no route. Accepts arbitrary ssh_options for legacy ciphers, KEX algorithms, and MTU workarounds."
 image: "ghcr.io/silicon-works/mcp-tools-ssh:latest"
 image_size_mb: 100
+timeout_seconds: 300
 
 capabilities:
   - remote_shell_access
