--- a/tools/tunnel/tool.yaml
+++ b/tools/tunnel/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "SSH tunnel and SOCKS5 proxy manager for accessing remote localhost-only services and pivoting into internal networks. 5 methods: forward (local port forwarding via 'ssh -L'), socks (dynamic port forwarding via 'ssh -D' for SOCKS5 proxy), list (show active tunnels), close (stop one tunnel), close_all (cleanup). Tunnels run as background SSH processes managed by PID. Supports password (sshpass) and private key authentication. Auto-assigns local ports when local_port=0. Requires host network mode so tunnels are accessible from other MCP containers."
 image: "ghcr.io/silicon-works/mcp-tools-tunnel:latest"
 image_size_mb: 100
+timeout_seconds: 600
 
 capabilities:
   - port_forwarding
