--- a/tools/web-fingerprint/tool.yaml
+++ b/tools/web-fingerprint/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "Web technology fingerprinting tool that identifies CMS platforms (WordPress, Joomla, Drupal, XWiki), server-side frameworks (Laravel, Django, Rails, ASP.NET, Spring, Express), web servers (Apache, nginx, IIS, Tomcat, Jetty), JavaScript frameworks (React, Vue.js, Angular, jQuery), database management UIs (phpMyAdmin, Adminer), DevOps tools (GitLab, Jenkins, Grafana, Kibana), and CDN/infrastructure (CloudFlare, AWS ELB, Varnish) using signature-based matching against HTTP headers, response body patterns, meta tags, and cookies. Also checks security headers and calculates favicon hashes."
 image: "ghcr.io/silicon-works/mcp-tools-web-fingerprint:latest"
 image_size_mb: 100
+timeout_seconds: 120
 
 capabilities:
   - technology_detection
