--- a/tools/web-session/tool.yaml
+++ b/tools/web-session/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "Web session state management for authenticated security testing. 7 methods: login (POST form login and capture session cookies), get_cookies (retrieve stored cookies in header/dict/raw format for use with other tools), set_cookies (import cookies from browser or other source), request (make authenticated HTTP requests with stored session), list_sessions (show all stored sessions), extract_csrf (extract CSRF tokens from pages via regex), delete_session (cleanup). Named sessions persist across calls within a container session. Cookies can be exported as header strings for curl, ffuf, sqlmap, etc."
 image: "ghcr.io/silicon-works/mcp-tools-web-session:latest"
 image_size_mb: 100
+timeout_seconds: 300
 
 capabilities:
   - session_management
