--- a/tools/wpscan/tool.yaml
+++ b/tools/wpscan/tool.yaml
@@ -3,6 +3,7 @@ version: "3.8.28"
 description: "WordPress security scanner (WPScan v3.8.28, Ruby-based) for comprehensive WordPress enumeration and vulnerability assessment. Detects WordPress version, enumerates plugins (vulnerable/all/popular), themes (vulnerable/all/popular), users (with configurable ID range), timthumbs, config backups (wp-config.php~, wp-config.bak, etc.), and database exports. Three detection modes: passive (minimal requests), aggressive (brute-force file detection), and mixed (default). JSON output with structured parsing of plugins, themes, users, and vulnerabilities. Supports WPVulnDB API token (25 free lookups/day via WPSCAN_API_TOKEN env var or --api-token) for mapping detected plugins/themes to known CVEs. Password brute-force via wp-login, XML-RPC, or XML-RPC multicall (500 passwords/request, WP < 4.4 only). Built-in --stealthy mode (passive detection + random user agent)."
 image: "ghcr.io/silicon-works/mcp-tools-wpscan:latest"
 image_size_mb: 300
+timeout_seconds: 300
 
 capabilities:
   - wordpress_scanning
