--- a/tools/zap/tool.yaml
+++ b/tools/zap/tool.yaml
@@ -3,6 +3,7 @@ version: "2.14"
 description: "OWASP ZAP 2.14 web application security scanner. 12 methods: spider (crawl to discover URLs), active_scan (test for SQLi, XSS, OWASP Top 10), quick_scan (spider + active scan combined), ajax_spider (Chrome headless for JavaScript-heavy SPAs), stop_scan, get_alerts (vulnerability details by severity), get_urls, scan_status, summary, proxy_history (captured HTTP traffic like Burp), send_request (manual HTTP like Burp Repeater), proxy_info (proxy settings for Playwright integration). Runs as a service container with persistent state. Can proxy Playwright browser traffic for combined JS app testing."
 image: "ghcr.io/silicon-works/mcp-tools-zap:latest"
 image_size_mb: 1200
+timeout_seconds: 600
 
 capabilities:
   - web_vulnerability_scanning
