--- a/tools/target-tracker/tool.yaml
+++ b/tools/target-tracker/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "Track target state throughout a penetration test engagement. 17 methods in 6 categories: targets (add_target, get_target, list_targets), ports/services (add_port), credentials (add_credential, update_credential, get_credentials), vulnerabilities (add_vulnerability, update_vulnerability), sessions (add_session, remove_session), loot (add_loot), attacks (record_attack, get_attack_history), ownership (mark_owned), notes (add_note), reporting (get_summary, suggest_next_steps). In-memory state persists across calls within a single container session. Does NOT require network — runs locally."
 image: "ghcr.io/silicon-works/mcp-tools-target-tracker:latest"
 image_size_mb: 80
+timeout_seconds: 60
 
 capabilities:
   - state_tracking
