ci: add netexec and evil-winrm to image build workflow

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -110,6 +110,10 @@ jobs:
               - 'tools/ghidra/**'
             impacket:
               - 'tools/impacket/**'
+            netexec:
+              - 'tools/netexec/**'
+            evil-winrm:
+              - 'tools/evil-winrm/**'
             playwright:
               - 'tools/playwright/**'
 
@@ -203,7 +207,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tool: [curl, cve-lookup, embedding, enum4linux-ng, exploit-runner, ffuf, ftp, ghidra, hash-lookup, hydra, ike-scan, impacket, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, office-exploit, payload, playwright, scapy, searchsploit, shell-session, sqlite, sqlmap, ssh, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
+        tool: [curl, cve-lookup, embedding, enum4linux-ng, evil-winrm, exploit-runner, ffuf, ftp, ghidra, hash-lookup, hydra, ike-scan, impacket, john, lfi-rfi, metasploit, mongodb, mysql, netcat, netexec, nikto, nmap, nosqlmap, nuclei, office-exploit, payload, playwright, scapy, searchsploit, shell-session, sqlite, sqlmap, ssh, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
 
     permissions:
       contents: read
